--- a/assets/css/indexStyle.css
+++ b/assets/css/indexStyle.css
@@ -179,6 +179,124 @@
 
 /* End Section Two  */
 
+/* Register and Login */
+.register {
+    padding: 60px 0;
+}
+
+.login {
+    padding: 60px 0;
+}
+
+.form {
+    width: 550px;
+    border-radius: 10px;
+    padding: 20px 40px;
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.title {
+    font-size: 36px;
+    font-weight: 700;
+    color: #192335;
+    margin-top: 0;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.form input {
+    width: 100%;
+    height: 60px;
+    border: 0;
+    background-color: #F5F5F5;
+    margin-bottom: 30px;
+    padding: 10px 20px;
+    border-radius: 8px;
+    outline: none;
+    font-size: 16px;
+}
+
+.form input[type="checkbox"] {
+    width: auto;
+    height: auto;
+}
+
+.form button {
+    width: 100%;
+    height: 60px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #ffffff;
+    background-color: var(--color-two);
+    border: 0;
+    border-radius: 8px;
+}
+
+.form button:hover {
+    background-color: var(--color-text);
+}
+
+/* End Register and Login */
+
+/* Quan ly thu nhap va chi tieu */
+.container h1 {
+    text-align: center;
+    font-size: 40px;
+    font-weight: 900;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: #FF5757;
+}
+
+
+.container button {
+    width: 10%;
+    height: 40px;
+    border-radius: 20px;
+    background-color: #FF5757;
+}
+
+.container table {
+    width: 100%;
+    margin-top: 52px;
+    margin-bottom: 100px;
+}
+
+.container table caption {
+    font-size: 12px;
+    padding: 12px;
+}
+
+.container table tr {
+    text-align: center;
+    font-size: 24px;
+    font-weight: 500;
+    border: none;
+}
+
+.container table td button {
+    width: 100%;
+    color: #fff;
+}
+
+.container table tr th {
+    background-color: #FF5757;
+    color: #fff;
+}
+
+.container table .SuaXoa a {
+    color: #FF5757;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.container table td .SuaXoa:hover a {
+    text-decoration: underline;
+}
+
+/*End Quan ly thu nhap va chi tieu */
+
 /* Footer  */
 .footer {
     background-color: #FF5757;
