--- a/assets/css/themsuaxoaQLCT.css
+++ b/assets/css/themsuaxoaQLCT.css
@@ -1,72 +1,80 @@
 .nenmodal .nenmodal2 {
-    position:fixed;
-    top:0px;
-    left:0px;
-    width:100vw;
-    height:100vh;
-    background:rgba(0,0,0,0.7);
-    z-index:1;
-    display:none;
-    }
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 1;
+    display: none;
+}
 
 .nenmodal .ndmodal {
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%) scale(0);
-    background:#fff;
-    width:600px;
-    z-index:2;
-    text-align:center;
-    padding:20px;
-    box-sizing:border-box;
-    font-family:"Open Sans",sans-serif;
-    border-radius:20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    background: #fff;
+    width: 600px;
+    z-index: 2;
+    text-align: center;
+    padding: 20px;
+    box-sizing: border-box;
+    font-family: "Open Sans", sans-serif;
+    border-radius: 20px;
     display: block;
     position: fixed;
-    box-shadow:0px 0px 10px #111;
-    }
-    @media (max-width: 700px) {
-    .nenmodal .ndmodal {width:90%;}
-    }
-    /* CSS bao bọc của nút tắt Modal */
-    .nenmodal .closemodal {
-    text-align:center;
-    margin-top:-40px;
-    margin-bottom:10px;
-    }
-    /* CSS tieu de của Modal */
-    .titlemodal{
-    font-weight:bold;
-    font-size:20px;
-    margin-bottom:10px;
-    }
-    /* CSS nút tắt modal */
-    .closemodal button{
-    width:40px;
-    height:40px;
-    font-size:30px;
-    padding:0px;
-    border-radius:100%;
-    background:#333;
-    color:#fff;
-    border:none;
-    }
-    .nenmodal.active .nenmodal2 {
-    display:block;
-    }
-    /* CSS hiệu ứng hiển thị Modal */
-    .nenmodal.active .ndmodal {
-    transition:all 300ms ease-in-out;
-    transform:translate(-50%,-50%) scale(1);
-    }
+    box-shadow: 0px 0px 10px #111;
+}
 
-    
-    /* POPUP THEM */
+@media (max-width: 700px) {
+    .nenmodal .ndmodal {
+        width: 90%;
+    }
+}
 
-    /* Register  */
+/* CSS bao bọc của nút tắt Modal */
+.nenmodal .closemodal {
+    text-align: center;
+    margin-top: -40px;
+    margin-bottom: 10px;
+}
 
-.form-child{
+/* CSS tieu de của Modal */
+.titlemodal {
+    font-weight: bold;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+/* CSS nút tắt modal */
+.closemodal button {
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+    padding: 0px;
+    border-radius: 100%;
+    background: #333;
+    color: #fff;
+    border: none;
+}
+
+.nenmodal.active .nenmodal2 {
+    display: block;
+}
+
+/* CSS hiệu ứng hiển thị Modal */
+.nenmodal.active .ndmodal {
+    transition: all 300ms ease-in-out;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+
+/* POPUP THEM */
+
+/* Register  */
+
+.form-child {
     display: flex;
     justify-content: space-between;
 }
@@ -99,7 +107,7 @@
     border-radius: 8px;
     outline: none;
     font-size: 16px;
-    
+
 }
 
 .form-child label {
@@ -123,23 +131,25 @@
     background-color: var(--color-text);
 }
 
-.container1 .closemodel button{
-    width:40px;
-    height:40px;
-    font-size:30px;
-    padding:0px;
-    border-radius:100%;
-    background:#333;
-    color:#fff;
-    border:none;
+.container1 .closemodel button {
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+    padding: 0px;
+    border-radius: 100%;
+    background: #333;
+    color: #fff;
+    border: none;
 }
 
-.register.active{
+.register.active {
     display: block;
 }
+
 /* CSS hiệu ứng hiển thị Modal */
-.register.active  {
-    transition:all 300ms ease-in-out;
-    transform:translate(-50%,-50%) scale(1);
-    }
+.register.active {
+    transition: all 300ms ease-in-out;
+    transform: translate(-50%, -50%) scale(1);
+}
+
 /* End Register  */
